--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,11 +2,10 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "rootDir": "src",
     "outDir": "dist",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src", "src/config"]
+  "include": ["src", "config"]
 }
