--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
-    "dotenv": "^17.0.1",
+    "dotenv": "16",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
