finished auth added cloudinary

--- a/backend/config/.env.example
+++ b/backend/config/.env.example
@@ -5,3 +5,6 @@ DOTENV_KEY=
 SALT_WORK_FACTOR=salt_work_factor
 JWT_SECRET=secret
 NODE_ENV=node_env
+CLOUDINARY_CLOUD_NAME=cloud_name
+CLOUDINARY_API_KEY=api_key
+CLOUDINARY_API_SECRET=secret
