--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "16",
@@ -24,11 +24,9 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^3.0.0",
+    "@types/bcrypt": "5.0.2",
     "@types/cookie-parser": "^1.4.9",
-    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
-    "@types/express-validator": "^3.0.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.9",
     "@types/socket.io": "^3.0.2",
