--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "outDir": "dist",
+    "target": "es2016",
+    "module": "commonjs",
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "outDir": "./dist",
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src", "config"]
+  "include": ["src", "backend/src/types"]
 }
