--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "16",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
